2008-03-03  John Levon  <levon@movementarian.org>

	* daemon/oprofiled.c: fix error message typo

2008-02-22  Haavard Skinnemoen  <hskinnemoen@atmel.com>

	*  events/Makefile.am:
	*  events/avr32/events:
	*  events/avr32/unit_masks:
	*  libop/op_cpu_type.c:
	*  libop/op_cpu_type.h:
	*  libop/op_events.c:
	*  utils/ophelp.c: Add AVR32 support
 
2008-02-22  Richard Purdie  <rpurdie@openedhand.com>

	* libutil++/file_manip.cpp:
	* pp/oparchive.cpp:
	Check files actually exist before copying or listing the file as part of
	oparchive --list-files.

	The copy_file function breaks if passed a directory as a file to copy 
	since it will create a file at the destination causing subtle bugs.

2008-02-22  Andy Fleming <afleming@freescale.com>

	*  events/Makefile.am:
	*  events/ppc/e300/events:
	*  events/ppc/e300/unit_masks:
	*  libop/op_cpu_type.c:
	*  libop/op_cpu_type.h:
	*  libop/op_events.c:
	*  utils/ophelp.c: Add e300 support
 
2008-02-22  Bob Nelson  <rrnelson@us.ibm.com>

	* utils/opcontrol: Fix loop in dump code when using
	  --session-dir on a network drive.  (clock issues)

2008-02-15  Will Cohen  <wcohen@redhat.com>

	* gui/oprof_start_util.cpp
	* libutil++/file_manip.cpp
	* libutil++/bfd_support.cpp
	* libutil++/bfd_spu_support.cpp
	* libutil++/op_spu_bfd.cpp
	* libutil++/cverb.cpp
	* libutil++/child_reader.cpp
	* pp/opgprof_options.cpp
	* pp/opannotate_options.cpp
	* pp/oparchive.cpp
	* pp/common_option.cpp
	* libpp/sample_container.cpp
	* libpp/op_header.cpp
	* libpp/profile.cpp
	* libabi/opimport.cpp
	* libregex/demangle_symbol.cpp: Add includes for gcc 4.3 compatibility.

2008-02-07  Bob Nelson  <rrnelson@us.ibm.com>

	* libutil++/op_bfd.h:  add bool symb_artificial to op_bfd_symbol
	* libutil++/op_bfd.cpp:  ctor changes, use symb_artificial
	* libutil++/op_spu_bfd.cpp:  profile SPU 'stack' code

2008-02-04  Bob Nelson  <rrnelson@us.ibm.com>

	* daemon/opd_spu.c: Fix number of records to check for
	  in an SPU context switch
